// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $1,046.95
     
  </p>
</div>
`;

exports[`should render ExpenseSummary correctly with one expenses 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
     
  </p>
</div>
`;
